--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="https://areyoushe.github.io/modfam/" target="_blank" class="btn btn-light" aria-current="page">Modern Family</a>
     <a href="https://areyoushe.github.io/angry-birds/" target="_blank" class="btn btn-dark">Angry Birds</a>
     <a href="https://x.thunkable.com/web-build/index.html?projectId=600bece9ff9b2f00122a8a0c&noframe=1&responsive=1&screenId=a37c13d2-fcc4-4a68-a771-d0aa18f742a6" target="_blank" class="btn btn-light">Tic Tac Toe</a>
-    <a href="https://areyoushe.github.io/3d/" targer="_blank" class="btn btn-dark">3-D</a>
+    <a href="https://areyoushe.github.io/3d/" target="_blank" class="btn btn-dark">3-D</a>
     </div>
   </div>
 <img src="side.gif">
